# Taggr

./: .dockerignore  .gitignore  .icp-ledger-version  .pre-commit-config.yaml  .prettierignore  AGENTS.md  AI.md  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  LICENSE  LICENSE.md  Makefile  README.md  WHITEPAPER.md  backup.sh  balances.json  build.sh  canister_ids.json  dfx.json  package-lock.json  package.json  playwright.config.ts  postbuild.sh  recovery.md  release.sh  rust-toolchain.toml  shell.nix  tsconfig.json  webpack.config.js
.github/actions/setup-build-deps/: action.yml
.github/actions/setup-dfx/: action.yml
.github/actions/setup-ic-wasm/: action.yml
.github/actions/setup-nodejs/: action.yml
.github/workflows/: docker-image.yml  e2e-tests.yml  lint-and-test.yml  release.yml
backup/: Cargo.toml  README.md
backup/src/: main.rs
backup/src/commands/: mod.rs  raw.rs  send.rs
backup/src/common/: mod.rs  request_status.rs  signing.rs
docs/: LOCAL_DEVELOPMENT.md  WHITEPAPER.md
e2e/: command.ts  helpers.ts  import_local_minter.sh  install_icp_ledger.sh  poll_repost_flow.spec.ts  reports.spec.ts  setup.ts  teardown.ts  test0.spec.ts  test1.spec.ts  test2.spec.ts  test3.spec.ts  test4.spec.ts  test5.spec.ts  tsconfig.json  upgrades.spec.ts  user_flow.spec.ts  vanilla.spec.ts
e2e/elements/: global_navigation_element.ts  index.ts  post_editor_element.ts  post_element.ts  proposal_element.ts
e2e/pages/: accept_invite_page.ts  authenticated_home_page.ts  bookmarks_page.ts  feed_page.ts  global_navigation.ts  home_page.ts  index.ts  internet_identity_page.ts  invites_page.ts  journal_page.ts  mint_initial_credits_page.ts  mint_initial_cycles_page.ts  new_post_page.ts  new_realm_page.ts  post_page.ts  profile_page.ts  proposals_page.ts  realm_list_page.ts  realm_page.ts  recovery_page.ts  settings_page.ts  wallet_page.ts
e2e/support/: agent.ts  api.ts  command.ts  context.ts  conversion.ts  create_post.ts  create_user.ts  credits.ts  cycles.ts  index.ts  ledger.ts  post_interaction.ts  random_data.ts
e2e/tests/: bookmarks.spec.ts  post_creation.spec.ts  post_interaction.spec.ts  proposal.spec.ts  realms.spec.ts  sanity_check.spec.ts  seo.spec.ts  sign_up.spec.ts  user_invite.spec.ts  wallet.spec.ts
src/backend/: Cargo.toml  assets.rs  dev_features.rs  dev_helpers.rs  http.rs  lib.rs  metadata.rs  queries.rs  taggr.did  token.rs  updates.rs
src/backend/assets/: generated.rs  mod.rs
src/backend/env/: auction.rs  bitcoin.rs  canisters.rs  config.rs  delegations.rs  domains.rs  features.rs  invite.rs  invoices.rs  memory.rs  mod.rs  nns_proposals.rs  pfp.rs  post.rs  post_iterators.rs  proposals.rs  realms.rs  reports.rs  search.rs  siwe.rs  storage.rs  tip.rs  token.rs  user.rs
src/bucket/: Cargo.toml
src/bucket/src/: lib.rs  url.rs
src/canisters/: Cargo.toml  lib.rs
src/cmc_stub/: Cargo.toml  cmc_stub.did
src/cmc_stub/src/: lib.rs
src/frontend/assets/: WHITEPAPER.md  manifest.json  style.css
src/frontend/src/: api.js  api.ts  authentication.tsx  bucket_creation.ts  common.jsx  (+85 more)
src/upgrader/: Cargo.toml
tests/: Cargo.toml  download-pocket-ic.sh
tests/src/: backend_tests.rs  bucket_tests.rs  lib.rs
(+1 files in other folders)
