[package]
name = "backup"
version = "0.2.20"
authors = []
edition = "2018"

[[bin]]
name = "backup"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.34"
candid = "0.7.8"
clap = {version = "4.5.20", features = ["derive"] }
hex = {version = "0.4.2", features = ["serde"] }
ic-agent = "0.10.0"
ic-types = "0.2.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_bytes = "0.11.2"
serde_cbor = "0.11.2"
serde_json = "1.0.57"
tokio = { version = "1.2.0", features = [ "fs" ] }

[workspace]
exclude = ["taggr/backup"]

