[package]
name = "tests"
version = "0.1.0"
edition = "2018"

[dev-dependencies]
base64 = "0.21.5"
candid = "0.10.3"
hex = "0.4.3"
ic-cdk = "0.12.1"
ic-cdk-macros = "0.8.4"
ic-cdk-timers = "0.6.0"
ic-certified-map = "0.4.0"
ic-ledger-types = "0.9.0"
# TODO: change it to regular crate, once the next version that contains this
# revision is released.
pocket-ic = {git = "https://github.com/dfinity/ic", rev = "70fd98587edcc4d2c7190873d176d4a0f7317397"}
serde = { version = "1.0.192", features = ["derive"] }
serde_bytes = "0.11.12"
serde_cbor = "0.11.2"
serde_json = "1.0.108"
