[package]
name = "taggr"
version = "0.1.0"
edition = "2018"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21.5"
candid = "0.10.10"
hex = "0.4.3"
ic-cdk = "0.16.0"
ic-cdk-macros = "0.16.0"
ic-cdk-timers = "0.9.0"
ic-certified-map = "0.4.0"
ic-ledger-types = "0.9.0"
icrc-ledger-types = "0.1.6"
png = "0.17"
serde = { version = "1.0.192", features = ["derive"] }
serde_bytes = "0.11.15"
serde_cbor = "0.11.2"
serde_json = "1.0.125"
sha2 = "0.10.8"
tiny-skia = "0.7"

[dev-dependencies]
actix-rt = "*"
candid_parser = "0.1.4"

[features]
dev = []
staging = []
