[package]
name = "taggr"
version = "0.1.0"
edition = "2018"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21.5"
bitcoin = "0.32.5"
candid = "0.10.10"
hex = "0.4.3"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
ic-cdk-timers = "0.11.0"
ic-certified-map = "0.4.0"
ic-ledger-types = "0.14"
icrc-ledger-types = "0.1.8"
png = "0.17.16"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
serde_cbor = "0.11.2"
serde_json = "1.0.140"
sha2 = "0.10.8"

[dev-dependencies]
actix-rt = "*"
candid_parser = "0.1.4"

[features]
dev = []
staging = []
