[package]
name = "taggr"
version = "0.1.0"
edition = "2018"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21.5"
bitcoin = "0.32.8"
candid = "0.10.27"
hex = "0.4.3"
ic-cdk = "0.20.1"
ic-cdk-bitcoin-canister = "0.2.0"
ic-cdk-macros = "0.20.1"
ic-cdk-management-canister = "0.1.1"
ic-cdk-timers = "1.0.0"
ic-certified-map = "0.4.1"
ic-ledger-types = "0.16.0"
ic-xrc-types = "1.2.0"
icrc-ledger-types = "0.2.0"
png = "0.18.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_cbor = "0.11.2"
serde_json = "1.0.149"
sha2 = "0.10.8"

[dev-dependencies]
actix-rt = "*"
candid_parser = "0.1.4"

[features]
dev = []
staging = []
